--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "body-parser": "^1.17.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.6",
+    "ex": "^0.1.4",
+    "express": "^4.15.3",
     "express-session": "^1.15.3",
-    "mongoose": "^4.10.5",
+    "mongoose": "^4.10.6",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   }
